<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="173dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/beermakerlogo512" />

            <TextView
                android:id="@+id/head_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_title_1"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/par_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/titre_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_0"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_1"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_2"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_3"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_4"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_5"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_6"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/par_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/titre_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/titre_7"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_7" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="98dp"
                android:layout_height="91dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back"
                tools:visibility="gone" />

            <ImageButton
                android:id="@+id/next_btn"
                android:layout_width="98dp"
                android:layout_height="91dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_forward" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>