<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/beermakerlogo512" />

            <TextView
                android:id="@+id/head_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_title_2"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="413dp"
        android:layout_height="608dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/outils_txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_txt_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_1"
                    android:layout_width="110dp"
                    android:layout_height="39dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toEndOf="@+id/outils_txt_1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outils_txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_txt_2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editText_1"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/outils_txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_txt_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_2"
                    android:layout_width="110dp"
                    android:layout_height="39dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toEndOf="@+id/outils_txt_3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outils_txt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_txt_4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editText_2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/outils_txt_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_txt_5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_3"
                    android:layout_width="110dp"
                    android:layout_height="39dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toEndOf="@+id/outils_txt_5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outils_txt_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_txt_6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editText_3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/outils_bt_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outils_bt_cal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/outils_zone_cal"
                android:layout_width="match_parent"
                android:layout_height="444dp"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/outils_des_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outils_des_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_1" />

                <TextView
                    android:id="@+id/outils_des_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_2" />

                <TextView
                    android:id="@+id/outils_des_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_3" />

                <TextView
                    android:id="@+id/outils_des_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_4" />

                <TextView
                    android:id="@+id/outils_des_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_5" />

                <TextView
                    android:id="@+id/outils_des_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/outils_des_7"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_6" />

                <TextView
                    android:id="@+id/outils_des_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_7" />

                <TextView
                    android:id="@+id/outils_des_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_8" />

                <TextView
                    android:id="@+id/outils_des_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_des_10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_9" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/outils_color_box"
                    android:layout_width="190dp"
                    android:layout_height="61dp"
                    android:background="#878787"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outils_des_7">

                    <TextView
                        android:id="@+id/outils_color_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/outils_bt_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outils_bt_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>